Revert to 1.19 build